# popper_autoresearch_golf

./: .env.example  .gitignore  ISSUE_TEMPLATE.md  README.md  SETUP_API_KEYS.md  baseline_candidate.json  baseline_output.json  good_student_candidate.json  good_student_output.json  pressure_test_final.json  pressure_test_results.json  pyproject.toml
docs/: COMPLEXITY_AUDIT.md  CONTINUOUS_LOOP_TEST_RESULTS.md  CURSOR_INTEGRATION_SUMMARY.md  KIMI_COMPOSER_PIPELINE.md  PRESSURE_TEST_RESULTS.md  cursor_api_configuration.md  falsification_analysis.md  full_loop_execution_guide.md  stage_2_anthropic_analysis.md
docs/memos/: BENCHMARK_PIPELINE_MEMO.md
docs/prd/: CALIBRATION_LITE.md  CALIBRATION_THRESHOLD_CONSUMPTION.md  CALIBRATION_TO_MECHANISM_PROBES.md  (+6 more)
falsifier/: __init__.py  calibrate.py  calibration_lite.py  main.py  mechanism_probes.py  thresholds.py  types.py  validation.py
ideator/: anthropic_client.py  cli.py  gemini.py  kimi_client.py  knowledge.py  openai_client.py  parent_code.py  parent_context.py  prompts.py
knowledge_graph/: README.md  build_ideator_visual_timeline.py  graph.json  ingest_parameter_golf_records.py  render_seed_kg_force_graphviz.py  render_seed_kg_graphviz.py  seed_parameter_golf_kg.json
research/: baseline_micro_train.py  probe_library.py
scripts/: run_loop.sh  test_api_keys.py  verify_full_loop.sh
tests/: pressure_test_direct.py  pressure_test_full_pipeline.py  test_continuous_loop.py  test_execution_admission.py  test_falsifier_core.py  test_handoff_graph_preservation.py  test_knowledge_graph_integration.py  test_simple_loop.sh
(+376 files in other folders)
